--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
     <main>
       <section class="first-section">
         <h1 class="title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-          <button class="request-our-service-button">
-            Request our service
-          </button>
+        <button class="request-our-service-button">Request our service</button>
       </section>
       <section class="strong-points">
         <ul class="company-strong-points">
