--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="header-navigation">
         <ul class="navigation-list">
           <li class="navigation-list-item">
-            <a class="link" href="studio.html">Studio</a>
+            <a class="link" href="index.html">Studio</a>
           </li>
           <li class="navigation-list-item">
             <a class="link" href="portfolio.html">Portfolio</a>
@@ -107,7 +107,7 @@
         </ul>
       </section>
       <section class="our-team">
-        <h2 class="title-section">Our Team</h2>
+        <h2 class="title-section-team">Our Team</h2>
         <ul class="title-section-out-team">
           <li class="team-picture">
             <img
