--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
       <a class="company-logo" href="webstudio">Web</a>
       <nav class="header-navigation">
         <ul class="navigation-list">
-          <li><a class="link" href="studio.html">Studio</a></li>
+          <li><a class="link" href="index.html">Studio</a></li>
           <li>
             <a class="link" href="portfolio.html">Portfolio</a>
           </li>
@@ -60,7 +60,6 @@
               <p class="text-section-portfolio">Web-site</p>
             </div>
           </li>
-
           <li class="product-box">
             <img
               height="294"
