--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <header class="page-header">
+      <div class="page-header-container">
       <a class="company-logo" href="webstudio">Web</a>
       <nav class="header-navigation">
         <ul class="navigation-list">
@@ -33,6 +34,7 @@
         </li>
         <li><a class="link" href="+1 212-772-4150">+1 212-772-4150</a></li>
       </ul>
+    </div>
     </header>
     <main>
       <section>
@@ -160,12 +162,14 @@
       </section>
     </main>
     <footer class="footer">
+      <div class="footer-conteiner">
       <a class="company-logo-footer" href="webstudio">Web</a>
       <ul class="footer-contact-info">
         <li><p class="text-section-adress">695 Park Ave, NY 10065, USA</p></li>
         <li><p class="text-section-contact">info@devstudio.com</p></li>
         <li><p class="text-section-contact">+1 212-772-4150</p></li>
       </ul>
+     </div>
     </footer>
   </body>
 </html>
