--- a/index.html
+++ b/index.html
@@ -18,151 +18,163 @@
   <body>
     <header class="page-header">
       <div class="page-header-container">
-      <a class="company-logo" href="webstudio">Web</a>
-      <nav class="header-navigation">
-        <ul class="navigation-list">
-          <li class="navigation-list-item">
-            <a class="link" href="index.html">Studio</a>
+        <a class="company-logo" href="webstudio">Web</a>
+        <nav class="header-navigation">
+          <ul class="navigation-list">
+            <li class="navigation-list-item">
+              <a class="link" href="index.html">Studio</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="link" href="contacts.html">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="right-navigation-list">
+          <li class="contact-list-item">
+            <a class="link" href="info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="navigation-list-item">
-            <a class="link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="navigation-list-item">
-            <a class="link" href="contacts.html">Contacts</a>
+          <li class="contact-list-item">
+            <a class="link" href="+1 212-772-4150">+1 212-772-4150</a>
           </li>
         </ul>
-      </nav>
-      <ul class="right-navigation-list">
-        <li class="contact-list-item">
-          <a class="link" href="info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="contact-list-item">
-          <a class="link" href="+1 212-772-4150">+1 212-772-4150</a>
-        </li>
-      </ul>
       </div>
     </header>
     <main>
       <section class="first-section">
-        <h1 class="title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-        <button class="request-our-service-button">Request our service</button>
+        <div class="first-section-container">
+          <h1 class="title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+          <button class="request-our-service-button">
+            Request our service
+          </button>
+        </div>
       </section>
       <section class="strong-points">
-        <ul class="company-strong-points">
-          <li>
-            <h3 class="sub-title-section">ATTENTION TO DETAILS</h3>
-            <p class="text-section">
-              We go into all the details and processes of your business to
-              develop a customized solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="sub-title-section">PUNCTUALITY</h3>
-            <p class="text-section">
-              With us, you can feel safe and secure. An important principle of
-              the company: respect your time and deadlines.
-            </p>
-          </li>
-          <li>
-            <h3 class="sub-title-section">PLANNING</h3>
-            <p class="text-section">
-              You will be able to observe and participate in every phase of
-              solution development and implementation .
-            </p>
-          </li>
-          <li>
-            <h3 class="sub-title-section">MODERN TECHNOLOGIES</h3>
-            <p class="text-section">
-              We use innovative tools to solve assigned tasks. It's time to
-              simplify work processes.
-            </p>
-          </li>
-        </ul>
+        <div class="company-strong-points-container">
+          <ul class="company-strong-points">
+            <li>
+              <h3 class="sub-title-section">ATTENTION TO DETAILS</h3>
+              <p class="text-section">
+                We go into all the details and processes of your business to
+                develop a customized solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="sub-title-section">PUNCTUALITY</h3>
+              <p class="text-section">
+                With us, you can feel safe and secure. An important principle of
+                the company: respect your time and deadlines.
+              </p>
+            </li>
+            <li>
+              <h3 class="sub-title-section">PLANNING</h3>
+              <p class="text-section">
+                You will be able to observe and participate in every phase of
+                solution development and implementation .
+              </p>
+            </li>
+            <li>
+              <h3 class="sub-title-section">MODERN TECHNOLOGIES</h3>
+              <p class="text-section">
+                We use innovative tools to solve assigned tasks. It's time to
+                simplify work processes.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="what-we-do">
-        <h2 class="title-section">What we do</h2>
-        <ul class="title-section-img">
-          <li>
-            <img
-              height="294"
-              width="370"
-              src="images/work at laptop.jpg"
-              alt="work at laptop"
-            />
-          </li>
-          <li>
-            <img
-              height="294"
-              width="370"
-              src="images/mobile sink.jpg"
-              alt="mobile sink"
-            />
-          </li>
-          <li>
-            <img
-              height="294"
-              width="370"
-              src="images/tablet color chart.jpg"
-              alt="color chart"
-            />
-          </li>
-        </ul>
+        <div class="what-we-do-container">
+          <h2 class="title-section">What we do</h2>
+          <ul class="title-section-img">
+            <li>
+              <img
+                height="294"
+                width="370"
+                src="images/work at laptop.jpg"
+                alt="work at laptop"
+              />
+            </li>
+            <li>
+              <img
+                height="294"
+                width="370"
+                src="images/mobile sink.jpg"
+                alt="mobile sink"
+              />
+            </li>
+            <li>
+              <img
+                height="294"
+                width="370"
+                src="images/tablet color chart.jpg"
+                alt="color chart"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="our-team">
-        <h2 class="title-section-team">Our Team</h2>
-        <ul class="title-section-out-team">
-          <li class="team-picture">
-            <img
-              height="260"
-              width="270"
-              src="images/product designer.jpg"
-              alt="product designer"
-            />
-            <h3 class="team-member-name">Christopher Walker</h3>
-            <p class="text-section-team">Product Designer</p>
-          </li>
-          <li class="team-picture">
-            <img
-              height="260"
-              width="270"
-              src="images/frontend developer.jpg"
-              alt="frontend developer"
-            />
-            <h3 class="team-member-name">Kylie Evans</h3>
-            <p class="text-section-team">Frontend Developer</p>
-          </li>
-          <li class="team-picture">
-            <img
-              height="260"
-              width="270"
-              src="images/marketing.jpg"
-              alt="marketing"
-            />
-            <h3 class="team-member-name">Ryan Harris</h3>
-            <p class="text-section-team">Marketing</p>
-          </li>
-          <li class="team-picture">
-            <img
-              height="260"
-              width="270"
-              src="images/ui designer.jpg"
-              alt="ui designer"
-            />
-            <h3 class="team-member-name">Tyler Moore</h3>
-            <p class="text-section-team">UI Designer</p>
-          </li>
-        </ul>
+        <div class="out-team-container">
+          <h2 class="title-section-team">Our Team</h2>
+          <ul class="title-section-out-team">
+            <li class="team-picture">
+              <img
+                height="260"
+                width="270"
+                src="images/product designer.jpg"
+                alt="product designer"
+              />
+              <h3 class="team-member-name">Christopher Walker</h3>
+              <p class="text-section-team">Product Designer</p>
+            </li>
+            <li class="team-picture">
+              <img
+                height="260"
+                width="270"
+                src="images/frontend developer.jpg"
+                alt="frontend developer"
+              />
+              <h3 class="team-member-name">Kylie Evans</h3>
+              <p class="text-section-team">Frontend Developer</p>
+            </li>
+            <li class="team-picture">
+              <img
+                height="260"
+                width="270"
+                src="images/marketing.jpg"
+                alt="marketing"
+              />
+              <h3 class="team-member-name">Ryan Harris</h3>
+              <p class="text-section-team">Marketing</p>
+            </li>
+            <li class="team-picture">
+              <img
+                height="260"
+                width="270"
+                src="images/ui designer.jpg"
+                alt="ui designer"
+              />
+              <h3 class="team-member-name">Tyler Moore</h3>
+              <p class="text-section-team">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer-conteiner">
-      <a class="company-logo-footer" href="webstudio">Web</a>
-      <ul class="footer-contact-info">
-        <li><p class="text-section-adress">695 Park Ave, NY 10065, USA</p></li>
-        <li><p class="text-section-contact">info@devstudio.com</p></li>
-        <li><p class="text-section-contact">+1 212-772-4150</p></li>
-      </ul>
-     </div>
+        <a class="company-logo-footer" href="webstudio">Web</a>
+        <ul class="footer-contact-info">
+          <li>
+            <p class="text-section-adress">695 Park Ave, NY 10065, USA</p>
+          </li>
+          <li><p class="text-section-contact">info@devstudio.com</p></li>
+          <li><p class="text-section-contact">+1 212-772-4150</p></li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
