--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,7 @@
     </header>
     <main>
       <section>
+        <div class="portfolio-button-container">
         <ul class="portfolio-button">
           <li>
             <button class="link-portfolio">All</button>
@@ -47,8 +48,10 @@
             <button class="link-portfolio">Marketing</button>
           </li>
         </ul>
+        <div>
       </section>
       <section>
+        <div class="product-list-container">
         <ul class="product-list">
           <li class="product-box">
             <img
@@ -159,6 +162,7 @@
             </div>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <footer class="footer">
