--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     </div>
     </header>
     <main>
-      <section>
+      <section class="portoflio-section">
         <div class="portfolio-button-container">
         <ul class="portfolio-button">
           <li>
@@ -50,7 +50,7 @@
         </ul>
         <div>
       </section>
-      <section>
+      <section class="product-list-section">
         <div class="product-list-container">
         <ul class="product-list">
           <li class="product-box">
